--- a/src/Cosmos.I18N.RunsOn.AspNetCore/Cosmos.I18N.RunsOn.AspNetCore.csproj
+++ b/src/Cosmos.I18N.RunsOn.AspNetCore/Cosmos.I18N.RunsOn.AspNetCore.csproj
@@ -1,10 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
+  <Import Project="..\..\build\common.props" />
+
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.0;net461</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>7.2</LangVersion>
+    <RootNamespace />
   </PropertyGroup>
+
+  <PropertyGroup>
+    <AssemblyName>Cosmos.I18N.RunsOn.AspNetCore</AssemblyName>
+    <PackageId>Cosmos.I18N.RunsOn.AspNetCore</PackageId>
+    <Description>Cosmos I18N library</Description>
+    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
+    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
+    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Cosmos.I18N\Cosmos.I18N.csproj" />
   </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.0.0" />
