--- a/src/Cosmos.I18N.RunsOn.Console/Cosmos.I18N.RunsOn.Console.csproj
+++ b/src/Cosmos.I18N.RunsOn.Console/Cosmos.I18N.RunsOn.Console.csproj
@@ -1,20 +1,28 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
+
+  <Import Project="..\..\build\common.props" />
+
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net461;net451</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>7.2</LangVersion>
+    <RootNamespace />
   </PropertyGroup>
+
+  <PropertyGroup>
+    <AssemblyName>Cosmos.I18N.RunsOn.Console</AssemblyName>
+    <PackageId>Cosmos.I18N.RunsOn.Console</PackageId>
+    <Description>Cosmos I18N library</Description>
+    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
+    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
+    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Cosmos.I18N\Cosmos.I18N.csproj" />
   </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="AspectCore.Core" Version="0.2.4" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
     <PackageReference Include="AspectCore.Extensions.DependencyInjection" Version="0.2.4" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)'=='net461'">
-    <PackageReference Include="AspectCore.Extensions.DependencyInjection" Version="0.2.4" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)'=='net451'">
-    <PackageReference Include="AspectCore.Extensions.DependencyInjection.Backward" Version="0.2.4-beta1" />
   </ItemGroup>
 </Project>
