Refactor i18n structure: + Remove RunsOn projects + Add Extensions projects + Update projects' structure + Move `languagePackage` list from languageServiceProvider to languageManager

--- a/tests/Cosmos.I18N.Tests.ConsoleTest/Cosmos.I18N.Tests.ConsoleTest.csproj
+++ b/tests/Cosmos.I18N.Tests.ConsoleTest/Cosmos.I18N.Tests.ConsoleTest.csproj
@@ -6,6 +6,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\Cosmos.I18N.Adapters.Json\Cosmos.I18N.Adapters.Json.csproj" />
     <ProjectReference Include="..\..\src\Cosmos.I18N.Adapters.Xml\Cosmos.I18N.Adapters.Xml.csproj" />
-    <ProjectReference Include="..\..\src\Cosmos.I18N.RunsOn.Console\Cosmos.I18N.RunsOn.Console.csproj" />
+    <ProjectReference Include="..\..\src\Cosmos.I18N.Extensions.Console\Cosmos.I18N.Extensions.Console.csproj" />
   </ItemGroup>
 </Project>
