--- a/tests/Cosmos.I18N.Tests.ConsoleTest/Cosmos.I18N.Tests.ConsoleTest.csproj
+++ b/tests/Cosmos.I18N.Tests.ConsoleTest/Cosmos.I18N.Tests.ConsoleTest.csproj
@@ -8,4 +8,9 @@
     <ProjectReference Include="..\..\src\Cosmos.I18N.Adapters.Xml\Cosmos.I18N.Adapters.Xml.csproj" />
     <ProjectReference Include="..\..\src\Cosmos.I18N.Extensions.Console\Cosmos.I18N.Extensions.Console.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="Resources\**\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
