--- a/src/Cosmos.I18N/Cosmos.I18N.csproj
+++ b/src/Cosmos.I18N/Cosmos.I18N.csproj
@@ -26,10 +26,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cosmos.Extensions" Version="0.1.1-alpha3-123037" />
+    <PackageReference Include="Cosmos.Extensions" Version="0.1.1-beta3-130200" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.2.0" />
-    <PackageReference Include="Enums.NET" Version="2.3.2" />
+    <PackageReference Include="Enums.NET" Version="3.0.1" />
   </ItemGroup>
 
   <ItemGroup>
