--- a/src/Cosmos.I18N.Adapters.Json/Cosmos.I18N.Adapters.Json.csproj
+++ b/src/Cosmos.I18N.Adapters.Json/Cosmos.I18N.Adapters.Json.csproj
@@ -1,11 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
+  <Import Project="..\..\build\common.ns20-net461-net451.props" />
+
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netcoreapp3.0;netstandard2.1;netstandard2.0;net461;net451</TargetFrameworks>
   </PropertyGroup>
+
+  <PropertyGroup>
+    <AssemblyName>Cosmos.I18N.Adapters.Json</AssemblyName>
+    <PackageId>Cosmos.I18N.Adapters.Json</PackageId>
+    <Description>JSON Adapter (implement by Newtonsoft.JSON) for Cosmos I18N library.</Description>
+  </PropertyGroup>
+  
   <ItemGroup>
     <ProjectReference Include="..\Cosmos.I18N\Cosmos.I18N.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Cosmos.Serialization.NewtonsoftJson" Version="0.1.1-beta3-133300" />
   </ItemGroup>
 </Project>
