--- a/src/Cosmos.I18N.Extensions.Console/Cosmos.I18N.Extensions.Console.csproj
+++ b/src/Cosmos.I18N.Extensions.Console/Cosmos.I18N.Extensions.Console.csproj
@@ -1,20 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <Import Project="..\..\build\common.props" />
+    <Import Project="..\..\build\common.ns20-net461-net451.props" />
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
-        <LangVersion>7.2</LangVersion>
-        <RootNamespace />
+        <TargetFrameworks>netcoreapp3.0;netstandard2.1;netstandard2.0;net461;net451</TargetFrameworks>
     </PropertyGroup>
 
     <PropertyGroup>
         <AssemblyName>Cosmos.I18N.Extensions.Console</AssemblyName>
         <PackageId>Cosmos.I18N.Extensions.Console</PackageId>
-        <Description>Cosmos I18N library</Description>
-        <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-        <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-        <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+        <Description>Console extension for Cosmos i18n.</Description>
     </PropertyGroup>
 
     <ItemGroup>
@@ -23,6 +18,17 @@
 
     <ItemGroup>
         <PackageReference Include="AspectCore.Core" Version="1.3.0" />
+    </ItemGroup>
+
+    <ItemGroup Condition="'$(TargetFramework)'=='netcoreapp3.0' OR 
+                          '$(TargetFramework)'=='netstandard2.1' OR 
+                          '$(TargetFramework)'=='netstandard2.0' OR 
+                          '$(TargetFramework)'=='net461'">
         <PackageReference Include="AspectCore.Extensions.DependencyInjection" Version="1.3.0" />
     </ItemGroup>
+    
+    <ItemGroup Condition="'$(TargetFramework)'=='net451'">
+        <PackageReference Include="AspectCore.Extensions.DependencyInjection.Backward" Version="0.4.0" />
+    </ItemGroup>
+    
 </Project>
