--- a/src/Cosmos.I18N.Extensions.Handlebars/Cosmos.I18N.Extensions.Handlebars.csproj
+++ b/src/Cosmos.I18N.Extensions.Handlebars/Cosmos.I18N.Extensions.Handlebars.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <Import Project="..\..\build\common.ns20-net461-net452.props" />
+    <Import Project="..\..\build\common.props" />
 
     <PropertyGroup>
-        <TargetFrameworks>netcoreapp3.0;netstandard2.1;netstandard2.0;net461;net452</TargetFrameworks>
+        <TargetFrameworks>netcoreapp3.1;netstandard2.1;netstandard2.0;net461;net452</TargetFrameworks>
     </PropertyGroup>
 
     <PropertyGroup>
