--- a/src/Cosmos.I18N.Abstractions/Cosmos.I18N.Abstractions.csproj
+++ b/src/Cosmos.I18N.Abstractions/Cosmos.I18N.Abstractions.csproj
@@ -1,23 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <Import Project="..\..\build\common.ns20-net461-net451.props" />
+    <Import Project="..\..\build\common.props" />
 
     <PropertyGroup>
-        <TargetFrameworks>netcoreapp3.0;netstandard2.1;netstandard2.0;net461;net451</TargetFrameworks>
+        <TargetFrameworks>netcoreapp3.1;netstandard2.1;netstandard2.0;net461;net451</TargetFrameworks>
     </PropertyGroup>
 
     <PropertyGroup>
         <AssemblyName>Cosmos.I18N.Abstractions</AssemblyName>
         <PackageId>Cosmos.I18N.Abstractions</PackageId>
         <Description>Cosmos I18N abstractions library</Description>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-        <DocumentationFile>Cosmos.I18N.Abstractions.xml</DocumentationFile>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-        <DocumentationFile>Cosmos.I18N.Abstractions.xml</DocumentationFile>
     </PropertyGroup>
 
 </Project>
