--- a/src/Cosmos.I18N.Adapters.Json/Cosmos.I18N.Adapters.Json.csproj
+++ b/src/Cosmos.I18N.Adapters.Json/Cosmos.I18N.Adapters.Json.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <Import Project="..\..\build\common.ns20-net461-net451.props" />
+  <Import Project="..\..\build\common.props" />
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.0;netstandard2.1;netstandard2.0;net461;net451</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;netstandard2.1;netstandard2.0;net461;net451</TargetFrameworks>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -16,6 +16,6 @@
     <ProjectReference Include="..\Cosmos.I18N\Cosmos.I18N.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Cosmos.Serialization.NewtonsoftJson" Version="0.1.1-beta3-133300" />
+    <PackageReference Include="Cosmos.Serialization.NewtonsoftJson" Version="0.1.2" />
   </ItemGroup>
 </Project>
