--- a/src/Cosmos.I18N.Countries/Cosmos.I18N.Countries.csproj
+++ b/src/Cosmos.I18N.Countries/Cosmos.I18N.Countries.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <Import Project="..\..\build\common.ns20-net461-net451.props" />
+    <Import Project="..\..\build\common.props" />
 
     <PropertyGroup>
-        <TargetFrameworks>netcoreapp3.0;netstandard2.1;netstandard2.0;net461;net451</TargetFrameworks>
+        <TargetFrameworks>netcoreapp3.1;netstandard2.1;netstandard2.0;net461;net451</TargetFrameworks>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -12,16 +12,8 @@
         <Description>Country and region data for Cosmos I18N library</Description>
     </PropertyGroup>
 
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-        <DocumentationFile>Cosmos.I18N.Countries.xml</DocumentationFile>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-        <DocumentationFile>Cosmos.I18N.Countries.xml</DocumentationFile>
-    </PropertyGroup>
-
     <ItemGroup>
-        <PackageReference Include="Enums.NET" Version="3.0.1" />
+        <PackageReference Include="Enums.NET" Version="3.0.2" />
     </ItemGroup>
 
     <ItemGroup>
