--- a/src/Cosmos.I18N.Extensions.Autofac/Cosmos.I18N.Extensions.Autofac.csproj
+++ b/src/Cosmos.I18N.Extensions.Autofac/Cosmos.I18N.Extensions.Autofac.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <Import Project="..\..\build\common.ns20-net461-net451.props" />
+    <Import Project="..\..\build\common.props" />
 
     <PropertyGroup>
-        <TargetFrameworks>netcoreapp3.0;netstandard2.1;netstandard2.0;net461;net451</TargetFrameworks>
+        <TargetFrameworks>netcoreapp3.1;netstandard2.1;netstandard2.0;net461;net451</TargetFrameworks>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -17,6 +17,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Cosmos.Extensions.Autofac" Version="0.1.1-beta3-133300" />
+      <PackageReference Include="Cosmos.Extensions.Autofac" Version="0.1.2" />
     </ItemGroup>
 </Project>
