--- a/src/Cosmos.I18N.Extensions.Console/Cosmos.I18N.Extensions.Console.csproj
+++ b/src/Cosmos.I18N.Extensions.Console/Cosmos.I18N.Extensions.Console.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <Import Project="..\..\build\common.ns20-net461-net451.props" />
+    <Import Project="..\..\build\common.props" />
 
     <PropertyGroup>
-        <TargetFrameworks>netcoreapp3.0;netstandard2.1;netstandard2.0;net461;net451</TargetFrameworks>
+        <TargetFrameworks>netcoreapp3.1;netstandard2.1;netstandard2.0;net461;net451</TargetFrameworks>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -17,18 +17,18 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="AspectCore.Core" Version="1.3.0" />
+        <PackageReference Include="AspectCore.Core" Version="2.0.0" />
     </ItemGroup>
 
-    <ItemGroup Condition="'$(TargetFramework)'=='netcoreapp3.0' OR 
+    <ItemGroup Condition="'$(TargetFramework)'=='netcoreapp3.1' OR 
                           '$(TargetFramework)'=='netstandard2.1' OR 
                           '$(TargetFramework)'=='netstandard2.0' OR 
                           '$(TargetFramework)'=='net461'">
-        <PackageReference Include="AspectCore.Extensions.DependencyInjection" Version="1.3.0" />
+        <PackageReference Include="AspectCore.Extensions.DependencyInjection" Version="2.0.0" />
     </ItemGroup>
     
     <ItemGroup Condition="'$(TargetFramework)'=='net451'">
-        <PackageReference Include="AspectCore.Extensions.DependencyInjection.Backward" Version="0.4.0" />
+        <PackageReference Include="AspectCore.Extensions.DependencyInjection.Backward" Version="2.0.1" />
     </ItemGroup>
     
 </Project>
