--- a/src/Cosmos.I18N.Extensions.DependencyInjection/Cosmos.I18N.Extensions.DependencyInjection.csproj
+++ b/src/Cosmos.I18N.Extensions.DependencyInjection/Cosmos.I18N.Extensions.DependencyInjection.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <Import Project="..\..\build\common.ns20-net461-net451.props" />
+    <Import Project="..\..\build\common.props" />
 
     <PropertyGroup>
-        <TargetFrameworks>netcoreapp3.0;netstandard2.1;netstandard2.0;net461;net451</TargetFrameworks>
+        <TargetFrameworks>netcoreapp3.1;netstandard2.1;netstandard2.0;net461;net451</TargetFrameworks>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -16,12 +16,8 @@
         <ProjectReference Include="..\Cosmos.I18N\Cosmos.I18N.csproj" />
     </ItemGroup>
 
-    <ItemGroup>
-        <PackageReference Include="Cosmos.Extensions.DependencyInjection" Version="0.1.1-beta3-133300" />
-    </ItemGroup>
-
-    <ItemGroup Condition="'$(TargetFramework)'=='netcoreapp3.0' OR '$(TargetFramework)'=='netstandard2.1'">
-        <PackageReference Include="Microsoft.Extensions.Options" Version="3.0.1" />
+    <ItemGroup Condition="'$(TargetFramework)'=='netcoreapp3.1' OR '$(TargetFramework)'=='netstandard2.1'">
+        <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.0" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0' OR '$(TargetFramework)'=='net461'">
