--- a/src/Cosmos.I18N.Extensions.Console/Cosmos.I18N.Extensions.Console.csproj
+++ b/src/Cosmos.I18N.Extensions.Console/Cosmos.I18N.Extensions.Console.csproj
@@ -20,10 +20,7 @@
         <PackageReference Include="AspectCore.Core" Version="2.0.0" />
     </ItemGroup>
 
-    <ItemGroup Condition="'$(TargetFramework)'=='netcoreapp3.1' OR 
-                          '$(TargetFramework)'=='netstandard2.1' OR 
-                          '$(TargetFramework)'=='netstandard2.0' OR 
-                          '$(TargetFramework)'=='net461'">
+    <ItemGroup Condition="'$(TargetFramework)'=='netcoreapp3.1' OR &#xD;&#xA;                          '$(TargetFramework)'=='netstandard2.1' OR &#xD;&#xA;                          '$(TargetFramework)'=='netstandard2.0' OR &#xD;&#xA;                          '$(TargetFramework)'=='net461'">
         <PackageReference Include="AspectCore.Extensions.DependencyInjection" Version="2.0.0" />
     </ItemGroup>
     
