--- a/src/Cosmos.I18N.Adapters.Json/Cosmos.I18N.Adapters.Json.csproj
+++ b/src/Cosmos.I18N.Adapters.Json/Cosmos.I18N.Adapters.Json.csproj
@@ -16,6 +16,6 @@
     <ProjectReference Include="..\Cosmos.I18N\Cosmos.I18N.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Cosmos.Serialization.NewtonsoftJson" Version="0.1.2" />
+    <PackageReference Include="Cosmos.Serialization.NewtonsoftJson" Version="0.1.3-beta2-130522" />
   </ItemGroup>
 </Project>
