--- a/src/Cosmos.I18N.Adapters.Xml/Cosmos.I18N.Adapters.Xml.csproj
+++ b/src/Cosmos.I18N.Adapters.Xml/Cosmos.I18N.Adapters.Xml.csproj
@@ -17,6 +17,6 @@
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="Cosmos.Serialization.Xml" Version="0.1.2" />
+    <PackageReference Include="Cosmos.Serialization.Xml" Version="0.1.3-beta2-130522" />
   </ItemGroup>
 </Project>
