--- a/src/Cosmos.I18N.Extensions.DependencyInjection/Cosmos.I18N.Extensions.DependencyInjection.csproj
+++ b/src/Cosmos.I18N.Extensions.DependencyInjection/Cosmos.I18N.Extensions.DependencyInjection.csproj
@@ -3,7 +3,7 @@
     <Import Project="..\..\build\common.props" />
 
     <PropertyGroup>
-        <TargetFrameworks>netcoreapp3.1;netstandard2.1;netstandard2.0;net461;net451</TargetFrameworks>
+        <TargetFrameworks>netcoreapp3.1;netstandard2.0;net461;net451</TargetFrameworks>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -11,19 +11,25 @@
         <PackageId>Cosmos.I18N.Extensions.DependencyInjection</PackageId>
         <Description>Microsoft Dependency Injection extension for Cosmos i18n.</Description>
     </PropertyGroup>
-
+    
     <ItemGroup>
-        <ProjectReference Include="..\Cosmos.I18N\Cosmos.I18N.csproj" />
+        <PackageReference Include="Cosmos.Extensions.DependencyInjection" Version="0.1.3-beta2-130522" />
     </ItemGroup>
 
-    <ItemGroup Condition="'$(TargetFramework)'=='netcoreapp3.1' OR '$(TargetFramework)'=='netstandard2.1'">
-        <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.0" />
+    <ItemGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
+        <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.1" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0' OR '$(TargetFramework)'=='net461'">
         <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0" />
     </ItemGroup>
+    
     <ItemGroup Condition="'$(TargetFramework)'=='net451'">
         <PackageReference Include="Microsoft.Extensions.Options" Version="1.1.2" />
     </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\Cosmos.I18N\Cosmos.I18N.csproj" />
+    </ItemGroup>
+    
 </Project>
