--- a/src/Cosmos.I18N.Extensions.Autofac/Cosmos.I18N.Extensions.Autofac.csproj
+++ b/src/Cosmos.I18N.Extensions.Autofac/Cosmos.I18N.Extensions.Autofac.csproj
@@ -17,6 +17,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Cosmos.Extensions.Autofac" Version="0.1.2" />
+      <PackageReference Include="Cosmos.Extensions.Autofac" Version="0.1.3-beta2-130522" />
     </ItemGroup>
 </Project>
