--- a/src/Cosmos.I18N.Extensions.AspNetCore.TagHelpers/Cosmos.I18N.Extensions.AspNetCore.TagHelpers.csproj
+++ b/src/Cosmos.I18N.Extensions.AspNetCore.TagHelpers/Cosmos.I18N.Extensions.AspNetCore.TagHelpers.csproj
@@ -12,23 +12,15 @@
         <Description>AspNetCore TagHelpers extension for Cosmos i18n.</Description>
     </PropertyGroup>
 
-    <ItemGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
-        <FrameworkReference Include="Microsoft.AspNetCore.App" />
-    </ItemGroup>
-
-    <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
+    <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0' OR '$(TargetFramework)'=='net461'">
         <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.2.0" />
     </ItemGroup>
 
-    <ItemGroup Condition="'$(TargetFramework)'=='net451' OR '$(TargetFramework)'=='net461'">
+    <ItemGroup Condition="'$(TargetFramework)'=='net451'">
         <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="1.1.8" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Cosmos.I18N\Cosmos.I18N.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Cosmos\I18N" />
+        <ProjectReference Include="..\Cosmos.I18N.Extensions.AspNetCore\Cosmos.I18N.Extensions.AspNetCore.csproj" />
     </ItemGroup>
 </Project>
