--- a/src/Cosmos.I18N.Extensions.Host/Cosmos.I18N.Extensions.Host.csproj
+++ b/src/Cosmos.I18N.Extensions.Host/Cosmos.I18N.Extensions.Host.csproj
@@ -3,7 +3,7 @@
     <Import Project="..\..\build\common.props" />
 
     <PropertyGroup>
-        <TargetFrameworks>netcoreapp3.1;netstandard2.1;netstandard2.0;net461;net451</TargetFrameworks>
+        <TargetFrameworks>netcoreapp3.1;netstandard2.0;net461;net451</TargetFrameworks>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -14,26 +14,22 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Cosmos.I18N.Extensions.DependencyInjection\Cosmos.I18N.Extensions.DependencyInjection.csproj" />
-        <ProjectReference Include="..\Cosmos.I18N\Cosmos.I18N.csproj" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
 
-    <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.1'">
-        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.0" />
-        <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.0" />
-    </ItemGroup>
-
     <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0' OR '$(TargetFramework)'=='net461'">
         <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Routing.Abstractions" Version="2.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework)'=='net451'">
         <PackageReference Include="System.Core" Version="3.5.21022.801" />
         <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="1.1.3" />
+        <PackageReference Include="Microsoft.AspNetCore.Routing.Abstractions" Version="1.1.2" />
         <PackageReference Include="Microsoft.AspNetCore.Http" Version="1.1.2" />
     </ItemGroup>
 
