--- a/src/Cosmos.I18N/Cosmos.I18N.csproj
+++ b/src/Cosmos.I18N/Cosmos.I18N.csproj
@@ -13,11 +13,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cosmos.Extensions.DependencyInjection" Version="0.1.2" />
+    <PackageReference Include="Cosmos.Extensions.Dependency.Core" Version="0.1.3-beta2-130522" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'=='netcoreapp3.1' OR '$(TargetFramework)'=='netstandard2.1'">
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0' OR '$(TargetFramework)'=='net461'">
@@ -25,12 +25,11 @@
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'=='net451'">
-    <PackageReference Include="Cosmos.Extensions.Asyncs" Version="0.1.2" />
+    <PackageReference Include="Cosmos.Extensions.Asyncs" Version="0.1.3-beta2-130522" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="1.1.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Cosmos.I18N.Abstractions\Cosmos.I18N.Abstractions.csproj" />
     <ProjectReference Include="..\Cosmos.I18N.Countries\Cosmos.I18N.Countries.csproj" />
   </ItemGroup>
 </Project>
