--- a/src/Cosmos.I18N.Adapters.Yaml/Cosmos.I18N.Adapters.Yaml.csproj
+++ b/src/Cosmos.I18N.Adapters.Yaml/Cosmos.I18N.Adapters.Yaml.csproj
@@ -16,6 +16,6 @@
         <ProjectReference Include="..\Cosmos.I18N\Cosmos.I18N.csproj" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Cosmos.Serialization.YamlDotNet" Version="0.1.3-beta2-130522" />
+        <PackageReference Include="Cosmos.Serialization.YamlDotNet" Version="0.1.3" />
     </ItemGroup>
 </Project>
