--- a/src/Cosmos.I18N.Extensions.AspectCoreInjector/Cosmos.I18N.Extensions.AspectCoreInjector.csproj
+++ b/src/Cosmos.I18N.Extensions.AspectCoreInjector/Cosmos.I18N.Extensions.AspectCoreInjector.csproj
@@ -17,6 +17,6 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Cosmos.Extensions.AspectCoreInjector" Version="0.1.3-beta2-130522" />
+        <PackageReference Include="Cosmos.Extensions.AspectCoreInjector" Version="0.1.3" />
     </ItemGroup>
 </Project>
