--- a/src/Cosmos.I18N.Extensions.DependencyInjection/Cosmos.I18N.Extensions.DependencyInjection.csproj
+++ b/src/Cosmos.I18N.Extensions.DependencyInjection/Cosmos.I18N.Extensions.DependencyInjection.csproj
@@ -13,11 +13,11 @@
     </PropertyGroup>
     
     <ItemGroup>
-        <PackageReference Include="Cosmos.Extensions.DependencyInjection" Version="0.1.3-beta2-130522" />
+        <PackageReference Include="Cosmos.Extensions.DependencyInjection" Version="0.1.3" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
-        <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.1" />
+        <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.3" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0' OR '$(TargetFramework)'=='net461'">
